--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -27,5 +27,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - uses: sbt/setup-sbt@v1
-    - name: Run tests
+    - name: sbt build
+      run: sbt build
+    - name: sbt scalastyle
+      run: sbt scalastyle
+    - name: sbt test
       run: sbt test
